Added font-awesome fonts and icons.

--- a/resources/assets/sass/backend.scss
+++ b/resources/assets/sass/backend.scss
@@ -8,3 +8,4 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 // Bootswatch style
 @import "node_modules/bootswatch/spacelab/bootswatch";
+@import "~font-awesome/scss/font-awesome.scss";
